[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/not_needed/Village.gd" type="Script" id=1]
[ext_resource path="res://Shaders/outline_shadermaterial.tres" type="Material" id=2]
[ext_resource path="res://Sprites/Farm/House_Iso.png" type="Texture" id=3]


[node name="Node2D" type="Node2D" groups=[
"selectable",
"villages",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 2 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Name" type="Label" parent="."]
margin_left = -20.0
margin_top = -70.0
margin_right = 18.0
margin_bottom = -56.0
text = "NAME"

[node name="Population" type="Label" parent="."]
margin_left = 50.0
margin_top = -40.0
margin_right = 136.0
margin_bottom = -26.0
text = "POPULATION"

[node name="IdlePopulation" type="Label" parent="."]
margin_left = 50.0
margin_top = -20.0
margin_right = 136.0
margin_bottom = -6.0
text = "IDLE POPULATION"

[node name="Radius" type="Label" parent="."]
margin_left = 50.0
margin_right = 136.0
margin_bottom = 14.0
text = "RADIUS"

[node name="NeededFood" type="Label" parent="."]
margin_left = 50.0
margin_top = 20.0
margin_right = 144.0
margin_bottom = 34.0
text = "NEEDED FOOD"

[node name="GatheredFood" type="Label" parent="."]
margin_left = 50.0
margin_top = 40.0
margin_right = 161.0
margin_bottom = 54.0
text = "GATHERED FOOD"
